--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "1.15.0",
+    "@nuxtjs/supabase": "1.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "nuxt": "^3.17.6",
     "nuxt-rating": "^0.1.5",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@iconify-json/lucide": "^1.2.57",
+    "@vue/typescript-plugin": "^3.0.1",
+    "prettier": "^3.6.2",
+    "supabase": "^2.30.4"
   }
 }
