--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt-rating": "^0.1.5",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
