--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-final-modal": "^4.5.5",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-speedometer": "^3.0.1"
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.57",
